Fixed more FB bugs